# programming-tips

./: .cppcheck_suppr  .editorconfig  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test-fast.yml  test.yml
src/: 20210125_smart_pointers.cpp  20210201_raii.cpp  20210208_atomic.cpp  20210215_move.cpp  20210222_template.cpp  20210301_lambda.cpp  20210308_auto.cpp  20210315_literals.cpp  20210322_tuple.cpp  20210329_variant.cpp  20210405_pack.cpp  20210412_brace_init.cpp  20210419_enums.cpp  20210426_sfinae.cpp  20210503_bind.cpp  20210510_constexpr.cpp  20210517_any.cpp  20210524_optional.cpp  20210531_init_list.cpp  20210607-attributes.cpp  20210607_attributes.cpp  20210614_fold.cpp  20210628_string_view.cpp  20210927_compare.cpp  CMakeLists.txt
