add_executable(20210125_smart_pointers 20210125_smart_pointers.cpp)
add_executable(20210201_raii 20210201_raii.cpp)

add_executable(20210208_atomic 20210208_atomic.cpp)
find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
	target_compile_options(20210208_atomic PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
	target_link_libraries(20210208_atomic "${CMAKE_THREAD_LIBS_INIT}")
endif()
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	target_link_libraries(20210208_atomic atomic)
endif()

add_executable(20210215_move 20210215_move.cpp)
target_compile_features(20210215_move PRIVATE cxx_std_17)
if(CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
	target_compile_options(20210215_move PUBLIC "-Wno-self-move")
endif()

add_executable(20210222_template 20210222_template.cpp)
add_executable(20210301_lambda 20210301_lambda.cpp)
add_executable(20210308_auto 20210308_auto.cpp)
add_executable(20210315_literals 20210315_literals.cpp)

list(FIND CMAKE_CXX_COMPILE_FEATURES "cxx_std_20" index)
if(${index} GREATER -1 AND NOT CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
	target_compile_features(20210308_auto PRIVATE cxx_std_20)
	target_compile_features(20210315_literals PRIVATE cxx_std_20)
else()
	target_compile_features(20210308_auto PRIVATE cxx_std_17)
	target_compile_features(20210315_literals PRIVATE cxx_std_17)
endif()

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	target_compile_options(20210308_auto PUBLIC -Wno-unused-variable -Wno-unused-but-set-variable)
elseif(CMAKE_CXX_COMPILER_ID MATCHES ".*Clang")
	target_compile_options(20210308_auto PUBLIC -Wno-unused-variable)
endif()

if(MSVC)
	target_compile_options(20210315_literals PUBLIC /D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
endif()

if(TIPS_TESTS)
	find_program(VALGRIND_CMD NAMES valgrind)

	macro(tip_test TIP RET)
		if(VALGRIND_CMD)
			add_test(NAME ${TIP}-valgrind COMMAND ${VALGRIND_CMD} --error-exitcode=1 --leak-check=full $<TARGET_FILE:${TIP}> ${ARGN})
			set_tests_properties(${TIP}-valgrind PROPERTIES PASS_REGULAR_EXPRESSION ".*ERROR SUMMARY: 0 errors.*")
		endif()

		find_program(BASH_EXE bash)

		if(UNIX AND BASH_EXE)
			if(${RET} EQUAL 0)
				add_test(NAME ${TIP} COMMAND $<TARGET_FILE:${TIP}> ${ARGN})
			else()
				add_test(NAME ${TIP} COMMAND ${BASH_EXE} -c "$<TARGET_FILE:${TIP}> ${ARGN}; echo \"exit $?\"")
				math(EXPR RET_ "${RET} % 256")
				set_tests_properties(${TIP} PROPERTIES PASS_REGULAR_EXPRESSION "exit ${RET_}")
			endif()
		else()
			add_test(NAME ${TIP} COMMAND $<TARGET_FILE:${TIP}> ${ARGN})
			if(NOT ${RET} EQUAL 0)
				set_tests_properties(${TIP} PROPERTIES WILL_FAIL 1)
			endif()
		endif()
	endmacro()

	tip_test(20210125_smart_pointers 47)
	tip_test(20210201_raii 0)
	tip_test(20210208_atomic 0)
	tip_test(20210215_move 0)
	tip_test(20210222_template 0)
	tip_test(20210301_lambda 955 1000)
	tip_test(20210308_auto 0)
	tip_test(20210315_literals 0)
endif()

